--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
     "description": "A simple sudoku game written in React.m",
     "main": "App.js",
     "scripts": {
+        "dev": "parcel src/index.html",
         "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
-        "test": "echo 'no test script set up yet'"
+        "test": "echo 'no test script set up yet'",
+        "docker-build": "docker build -t sudoku:dev .",
+        "docker-run": "docker run -it -rm -v ${PWD}:/app -v /app/node_modules -p 1234:1234 -e CHOKIDAR_USEPOLLING=true sudoku:dev"
     },
     "repository": {
         "type": "git",
@@ -22,8 +25,13 @@
         "react-dom": "^17.0.1"
     },
     "devDependencies": {
+        "babel-eslint": "^10.1.0",
         "eslint": "^7.17.0",
         "eslint-config-prettier": "^7.1.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-react": "^7.22.0",
+        "parcel-bundler": "^1.12.4",
         "prettier": "^2.2.1"
     }
 }
