--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
     "description": "A simple sudoku game written in React.m",
     "main": "App.js",
     "scripts": {
-        "dev": "parcel src/index.html",
+        "dev": "parcel src/index.html --hmr-port 8080",
         "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
         "test": "echo 'no test script set up yet'",
         "docker-build": "docker build -t sudoku:dev .",
-        "docker-run": "docker run -it -rm -v ${PWD}:/app -v /app/node_modules -p 1234:1234 -e CHOKIDAR_USEPOLLING=true sudoku:dev"
+        "docker-run": "docker run --rm -it -v ${PWD}:/app -v /app/node_modules -p 1234:1234 -p 8080:8080 -e CHOKIDAR_USEPOLLING=true sudoku:dev"
     },
     "repository": {
         "type": "git",
