--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,8 @@
         "prettier/react"
     ],
     "rules": {
-        "react/prop-types": 0
+        "react/prop-types": 0,
+        "semi": "error"
     },
     "plugins": ["react", "import", "jsx-a11y"],
     "parserOptions": {
@@ -20,7 +21,8 @@
     "env": {
         "es6": true,
         "browser": true,
-        "node": true
+        "node": true,
+        "jest/globals": true
     },
     "settings": {
         "react": {
