--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
     "extends": [
         "eslint:recommended",
+        "plugin:jest/recommended",
         "plugin:import/errors",
         "plugin:react/recommended",
         "prettier",
@@ -10,7 +11,7 @@
         "react/prop-types": 0,
         "semi": "error"
     },
-    "plugins": ["react", "import", "jsx-a11y"],
+    "plugins": ["react", "import", "jsx-a11y", "jest"],
     "parserOptions": {
         "ecmaVersion": 2021,
         "sourceType": "module",
